# local-llm

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
notebooks/: local_llm_agent.ipynb
src/: __init__.py
